<resources>
    <string name="app_name">XandOGame</string>
    <string name="position01">position01</string>
    <string name="position00">position00</string>
    <string name="position02">position02</string>
    <string name="position10">position10</string>
    <string name="position12">position12</string>
    <string name="postition20">postition20</string>
    <string name="position11">position11</string>
    <string name="position22">position22</string>
    <string name="position21">position21</string>
</resources>
