<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gabi.xandogame.GameActivity"
    tools:layout_editor_absoluteY="81dp">

    <GridLayout
        android:id="@+id/boardLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/board"
        android:columnCount="3"
        android:rowCount="3"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/slot00"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:contentDescription="@string/position00"
            android:onClick="dropIn"
            android:tag="0" />

        <ImageView
            android:id="@+id/slot01"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:contentDescription="@string/position01"
            android:onClick="dropIn"
            android:tag="1" />

        <ImageView
            android:id="@+id/slot02"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:contentDescription="@string/position02"
            android:onClick="dropIn"
            android:tag="2" />

        <ImageView
            android:id="@+id/slot10"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_row="1"
            android:contentDescription="@string/position10"
            android:onClick="dropIn"
            android:tag="3" />

        <ImageView
            android:id="@+id/slot11"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_row="1"
            android:contentDescription="@string/position11"
            android:onClick="dropIn"
            android:tag="4" />

        <ImageView
            android:id="@+id/slot12"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_row="1"
            android:contentDescription="@string/position12"
            android:onClick="dropIn"
            android:tag="5" />

        <ImageView
            android:id="@+id/slot20"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_row="2"
            android:contentDescription="@string/postition20"
            android:onClick="dropIn"
            android:tag="6" />

        <ImageView
            android:id="@+id/slot21"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_row="2"
            android:contentDescription="@string/position21"
            android:onClick="dropIn"
            android:tag="7" />

        <ImageView
            android:id="@+id/slot22"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_row="2"
            android:contentDescription="@string/position22"
            android:onClick="dropIn"
            android:tag="8" />
    </GridLayout>

    <LinearLayout
        android:id="@+id/playAgainLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:background="@android:color/darker_gray"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="30dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/boardLayout">

        <pl.droidsonroids.gif.GifTextView
            android:id="@+id/fireworksGif"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/fireworks" />

        <TextView
            android:id="@+id/winnerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="playAgain"
            android:text="Play Again" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
